Fixed gap between card on the phone

--- a/src/scss/about/_about_card.scss
+++ b/src/scss/about/_about_card.scss
@@ -58,3 +58,11 @@
     }
   }
 }
+
+@media(max-width: 900px){
+
+  .about_column{
+    margin-top: 0;
+  }
+
+}
